bebytes/tests/compile_time/enums/flag_enum_too_large.stderr
error: Enum discriminant value 256 exceeds u8 range (0-255)
  --> tests/compile_time/enums/flag_enum_too_large.rs:11:13
   |
11 |     Flag3 = 256, // Error: Value too large for u8
   |             ^^^
